Add Docker Compose configuration to make app running within internal postgres locally

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,2 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/devices
-spring.datasource.username=root
-spring.datasource.password=sa
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
