--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,8 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
