--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=demo
 
+spring.profiles.default=dev
+
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
