--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
+
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
