Add actuator dependency and isolate it on port 8081 - Update readme with links to health, metrics and prometheus - Update docker compose to check the health of running app - Add hikari pool configuration for production profile

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,11 @@ spring.jpa.show-sql=false
 
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
+
+spring.datasource.hikari.pool-name=prod-hikari-pool
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=3000
+spring.datasource.hikari.validation-timeout=2000
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=600000
