--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,14 @@ services:
       SPRING_DATASOURCE_USERNAME: admin_admin
       SPRING_DATASOURCE_PASSWORD: pa$$word
       SPRING_JPA_HIBERNATE_DDL_AUTO: validate
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8081/actuator/health/readiness" ]
+      interval: 10s
+      timeout: 2s
+      retries: 3
     ports:
       - "8080:8080"
+      - "8081:8081"
 
 volumes:
   postgres_data:
