--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.profiles.default=dev
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=never
+management.server.port=8081
